@@ -11,7 +11,6 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 import javax.servlet.FilterChain;
@@ -46,18 +45,12 @@ public class UnmappedRackFilter extends AbstractFilter {
 
     private boolean responseHandledByDefault = true;
 
-    private static final Collection<Integer> RESPONSE_NOT_HANDLED_STATUSES;
-    static {
-        final Set<Integer> statuses = new HashSet<>(8, 1);
-        statuses.add(404);
-        // 403 due containers not supporting PUT/DELETE correctly (Tomcat 6)
-        statuses.add(403);
-        // 405 returned by Jetty 7/8 on PUT/DELETE requests by default
-        statuses.add(405);
-        // 501 is returned for non standard http verbs like PATCH
-        statuses.add(501);
-        RESPONSE_NOT_HANDLED_STATUSES = Collections.unmodifiableSet(statuses);
-    }
+    private static final Collection<Integer> RESPONSE_NOT_HANDLED_STATUSES = Set.of(
+            404,
+            403, // 403 due to containers not supporting PUT/DELETE correctly (Tomcat 6)
+            405, // 405 returned by Jetty 7/8 on PUT/DELETE requests by default
+            501  // 501 is returned for non-standard http verbs like PATCH
+    );
 
     private Collection<Integer> responseNotHandledStatuses = RESPONSE_NOT_HANDLED_STATUSES;
     private RackContext context;
